Update links and redirects

--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -17,18 +17,16 @@
   ],
   "sidebar": {
     "Overview": "/",
-    "Governance": {
-      "Schema checks": {
-        "Overview": "/schema-checks",
-        "Configuring schema checks": "/check-configurations",
-        "Connecting to GitHub": "/github-integration"
-      },
-      "Schema linting": {
-        "Overview": "/schema-linter",
-        "Linter rules": "/linter-rules"
-      }
+    "Schema checks": {
+      "Overview": "/schema-checks",
+      "Configuring schema checks": "/check-configurations",
+      "Connecting to GitHub": "/github-integration"
     },
-    "Delivery": {
+    "Schema linting": {
+      "Overview": "/schema-linter",
+      "Linter rules": "/linter-rules"
+    },
+    "Schema delivery": {
       "Publishing schemas": "/publishing-schemas",
       "Launches": "/launches",
       "Contracts": [
