Add meta descriptions

--- a/src/content/graphos/metrics/config.json
+++ b/src/content/graphos/metrics/config.json
@@ -45,7 +45,8 @@
       "Build status": [
         "/notifications/build-status-notification",
         [
-          "enterprise"
+          "enterprise",
+          "preview"
         ]
       ]
     }
