--- a/src/content/graphos/basics/config.json
+++ b/src/content/graphos/basics/config.json
@@ -50,16 +50,10 @@
     },
     "Routing": {
       "Overview": "/routing",
-      "Self-hosted routing": [
-        "/routing/self-hosted",
-        [
-          "enterprise"
-        ]
-      ],
       "Cloud routing": {
         "Overview": "/routing/cloud",
         "Configuration": "/routing/cloud-configuration",
-        "Dedicated cloud routing": [{
+        "Dedicated cloud routing": {
           "Overview": ["/routing/cloud-dedicated", [
             "preview"
           ]],
@@ -69,10 +63,14 @@
           "AWS Lattice troubleshooting": ["/routing/cloud-dedicated/lattice-troubleshooting", [
             "preview"
           ]]
-        },         [
-          "preview"
-        ]]
-    }
+        }
+      },
+      "Self-hosted routing": [
+        "/routing/self-hosted",
+        [
+          "enterprise"
+        ]
+      ]
     },
     "Client Operations": {
       "Using @defer": "/operations/defer",
