Remove self-hosted routing page and point nav to self-hosted quickstart page

--- a/src/content/graphos/basics/config.json
+++ b/src/content/graphos/basics/config.json
@@ -66,7 +66,7 @@
         }
       },
       "Self-hosted routing": [
-        "/routing/self-hosted",
+        "/quickstart/self-hosted",
         [
           "enterprise"
         ]
