--- a/src/content/graphos/enterprise/config.json
+++ b/src/content/graphos/enterprise/config.json
@@ -19,7 +19,6 @@
     "Overview": "/",
     "Self-Hosted Routing": {
       "Setup": "https://www.apollographql.com/docs/graphos/quickstart/self-hosted",
-      "Reference Architecture": "/reference-architecture",
       "Apollo Router Features": {
         "Overview": "https://www.apollographql.com/docs/router/enterprise-features",
         "GraphQL subscriptions": "https://www.apollographql.com/docs/router/executing-operations/subscription-support",
@@ -49,6 +48,10 @@
     "Metrics & Reporting": {
       "Datadog forwarding": "https://www.apollographql.com/docs/graphos/metrics/datadog-integration",
       "Build status notifications": "https://www.apollographql.com/docs/graphos/metrics/notifications/build-status-notification"
+    },
+    "Architecture": {
+      "Supergraph Architecture Framework": "/supergraph-architecture-framework",
+      "Reference Architecture": "/reference-architecture"
     }
   }
 }
