--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.127.0",
     "mdast-util-from-markdown": "^0.8.5",
+    "node-fetch": "^2.6.7",
     "path-browserify": "^1.0.1",
     "polished": "^4.1.4",
     "prismjs": "^1.27.0",
