Change from `typedoc` to `tsdoc`/`api-extractor-model` (#588)

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@loadable/component": "^5.15.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@microsoft/api-extractor-model": "^7.28.2",
     "@react-icons/all-files": "^4.1.0",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
@@ -75,6 +76,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.127.0",
     "mdast-util-from-markdown": "^0.8.5",
+    "node-fetch": "^2.6.7",
     "path-browserify": "^1.0.1",
     "polished": "^4.1.4",
     "prismjs": "^1.27.0",
