--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@jlengstorf/get-share-image": "^0.8.0",
     "@loadable/component": "^5.15.2",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "^3.0.0",
     "@microsoft/api-extractor-model": "^7.28.2",
     "@react-icons/all-files": "^4.1.0",
     "@svgr/webpack": "^5.5.0",
@@ -44,31 +43,31 @@
     "algoliasearch": "^4.12.1",
     "apollo-algolia-transform": "^1.0.38",
     "framer-motion": "^4.1.17",
-    "gatsby": "4.24.8",
-    "gatsby-plugin-algolia": "^0.24.0",
-    "gatsby-plugin-apollo": "^4.0.2",
+    "gatsby": "^5.12.11",
+    "gatsby-plugin-algolia": "^1.0.3",
+    "gatsby-plugin-apollo": "^4.0.3",
     "gatsby-plugin-apollo-onetrust": "git+https://github.com/apollographql/gatsby-plugin-apollo-onetrust.git#main",
-    "gatsby-plugin-env-variables": "^2.2.0",
-    "gatsby-plugin-google-gtag": "^4.3.0",
-    "gatsby-plugin-google-tagmanager": "^4.3.0",
-    "gatsby-plugin-loadable-components-ssr": "^4.2.0",
-    "gatsby-plugin-manifest": "^4.3.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-next-seo": "^1.9.0",
-    "gatsby-plugin-offline": "^5.3.0",
+    "gatsby-plugin-env-variables": "^2.3.0",
+    "gatsby-plugin-google-gtag": "^5.12.3",
+    "gatsby-plugin-google-tagmanager": "^5.12.3",
+    "gatsby-plugin-loadable-components-ssr": "^4.3.2",
+    "gatsby-plugin-manifest": "^5.12.3",
+    "gatsby-plugin-mdx": "^5.12.3",
+    "gatsby-plugin-next-seo": "^1.11.0",
+    "gatsby-plugin-offline": "^6.12.3",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-plugin-sitemap": "^6.12.3",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-plugin-webfonts": "^2.2.1",
-    "gatsby-remark-autolink-headers": "^5.4.0",
-    "gatsby-remark-copy-linked-files": "^5.4.0",
-    "gatsby-remark-mermaid": "^2.1.0",
-    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-plugin-webfonts": "^2.3.2",
+    "gatsby-remark-autolink-headers": "^6.12.3",
+    "gatsby-remark-copy-linked-files": "^6.12.0",
+    "gatsby-remark-mermaid": "^4.0.0",
+    "gatsby-source-filesystem": "^5.12.1",
     "gatsby-source-remote-file": "^0.5.2",
-    "gatsby-transformer-json": "^4.4.0",
-    "gatsby-transformer-remark": "^5.4.0",
+    "gatsby-transformer-json": "^5.12.0",
+    "gatsby-transformer-remark": "^6.12.3",
     "github-slugger": "^1.4.0",
-    "graphql": "^15.8.0",
+    "graphql": "^16.8.1",
     "graphql-ws": "^5.8.2",
     "https-browserify": "^1.0.0",
     "interweave": "^12.9.0",
@@ -82,15 +81,15 @@
     "prismjs": "^1.27.0",
     "prop-types": "^15.7.2",
     "puppeteer": "^10.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.2.1",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.0",
     "react-player": "^2.10.1",
     "react-use": "^17.3.2",
     "rehype": "^12.0.0",
-    "rehype-autolink-headings": "^5.1.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-react": "^7.0.3",
     "remark": "^14.0.2",
     "remark-react": "^9.0.1",
@@ -109,6 +108,6 @@
     "netlify-cli": "^15.0.2"
   },
   "volta": {
-    "node": "16.15.1"
+    "node": "18.18.2"
   }
 }
