Update page descriptions

--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -54,7 +54,7 @@
       [
         "enterprise"
       ]],
-      "Implement approved proposals":[ "/implement-proposals",
+      "Implement proposals":[ "/implement-proposals",
       [
         "enterprise"
       ]]
