--- a/src/content/graphos/enterprise/config.json
+++ b/src/content/graphos/enterprise/config.json
@@ -37,7 +37,8 @@
         "External coprocessing": "https://www.apollographql.com/docs/router/customizations/coprocessor"
       }
     },
-    "Schema Delivery": {
+    "Schema Pipeline": {
+      "Schema proposals": "https://www.apollographql.com/docs/graphos/delivery/schema-proposals",
       "Contracts": "https://www.apollographql.com/docs/graphos/delivery/contracts"
     },
     "Org Management & SSO": {
