--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@microsoft/api-extractor-model": "^7.28.2",
-    "@playwright/test": "^1.40.1",
     "@react-icons/all-files": "^4.1.0",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
@@ -63,7 +62,7 @@
     "gatsby-plugin-webfonts": "^2.2.1",
     "gatsby-remark-autolink-headers": "^5.4.0",
     "gatsby-remark-copy-linked-files": "^5.4.0",
-    "gatsby-remark-mermaid": "^4.0.0",
+    "gatsby-remark-mermaid": "^3.0.1",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-source-remote-file": "^0.5.2",
     "gatsby-transformer-json": "^4.4.0",
@@ -82,6 +81,7 @@
     "polished": "^4.1.4",
     "prismjs": "^1.27.0",
     "prop-types": "^15.7.2",
+    "puppeteer": "^10.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
