--- a/package.json
+++ b/package.json
@@ -93,12 +93,14 @@
     "rehype-autolink-headings": "^5.1.0",
     "rehype-react": "^7.0.3",
     "remark": "^14.0.2",
+    "remark-mermaidjs": "^5.0.2",
     "remark-react": "^9.0.1",
     "remark-typescript": "^0.6.1",
     "search-insights": "^1.8.0",
     "stream-http": "^3.2.0",
     "unist-util-visit": "^2.0.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vfile": "^5.3.7"
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^7.2.7",
