use "netlify-plugin-cache"

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,8 @@
   GATSBY_DISABLE_CACHE_PERSISTENCE = "1"
 [[plugins]]
   package = "@netlify/plugin-lighthouse"
+
+[[plugins]]
+package = "netlify-plugin-cache"
+  [plugins.inputs]
+  paths = [".mermaid"]
