--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-mdx": "^1.11.1",
     "jest": "^27.4.5",
-    "netlify-cli": "^15.0.2"
+    "netlify-cli": "^15.0.2",
+    "netlify-plugin-cache": "^1.0.3"
   },
   "volta": {
     "node": "16.15.1"
