--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:router": "npm start -- ../router",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "npx playwright install"
   },
   "dependencies": {
     "@algolia/autocomplete-core": "^1.5.2",
@@ -37,6 +38,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@microsoft/api-extractor-model": "^7.28.2",
+    "@playwright/test": "^1.40.1",
     "@react-icons/all-files": "^4.1.0",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
@@ -93,12 +95,14 @@
     "rehype-autolink-headings": "^5.1.0",
     "rehype-react": "^7.0.3",
     "remark": "^14.0.2",
+    "remark-mermaidjs": "^5.0.2",
     "remark-react": "^9.0.1",
     "remark-typescript": "^0.6.1",
     "search-insights": "^1.8.0",
     "stream-http": "^3.2.0",
     "unist-util-visit": "^2.0.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vfile": "^5.3.7"
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^7.2.7",
@@ -106,7 +110,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-mdx": "^1.11.1",
     "jest": "^27.4.5",
-    "netlify-cli": "^15.0.2"
+    "netlify-cli": "^15.0.2",
+    "netlify-plugin-cache": "^1.0.3"
   },
   "volta": {
     "node": "16.15.1"
