--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -21,7 +21,7 @@
       "sre": "/tags/sre",
       "subgraphs": "/tags/subgraphs",
       "testing": "/tags/testing",
-      "organisation": "/tags/organisation"
+      "organization": "/tags/organization"
     }
   }
 }
