--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -12,6 +12,7 @@
     "Release Policies": {
       "Product launch stages": "/resources/product-launch-stages",
       "Elastic License v2 FAQ": "/resources/elastic-license-v2-faq"
-    }
+    },
+    "Changelogs": "changelog"
   }
 }
