--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -37,7 +37,7 @@
             "enterprise"
           ]
         ],
-        "Tutorial": [
+        "Creating and using contracts": [
           "/contract-setup",
           [
             "enterprise"
