Restructure and rewrite Contracts docs (#661)
* Separate content into overview, tutorial, reference

* Overview rewrite

* Copyedit

* Edit

* Add redirects

--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -29,12 +29,27 @@
     "Schema delivery": {
       "Publishing schemas": "/publishing-schemas",
       "Launches": "/launches",
-      "Contracts": [
-        "/contracts",
-        [
-          "enterprise"
+      "Contracts":
+      {
+        "Overview": [
+          "/contracts",
+          [
+            "enterprise"
+          ]
+        ],
+        "Creating and using contracts": [
+          "/contract-setup",
+          [
+            "enterprise"
+          ]
+        ],
+        "Reference": [
+          "/contract-reference",
+          [
+            "enterprise"
+          ]
         ]
-      ]
+      }
     }
   }
 }
