Update Vale formats

--- a/vale.ini
+++ b/vale.ini
@@ -4,5 +4,9 @@ MinAlertLevel = suggestion
 
 Packages = Google, Readability
 
-[*]
+[formats]
+mdx = md
+
+[*.md*]
+
 BasedOnStyles = Vale, Google, Readability
