Select one readability style

--- a/vale.ini
+++ b/vale.ini
@@ -4,11 +4,11 @@ Vocab = Apollo
 
 MinAlertLevel = suggestion
 
-Packages = Google, Readability
+Packages = Google
 
 [formats]
 mdx = md
 
 [src/content/**/*.md*]
 
-BasedOnStyles = Vale, Google, Readability
+BasedOnStyles = Vale, Google, Apollo
