--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@algolia/autocomplete-preset-algolia": "^1.5.2",
     "@apollo/chakra-helpers": "^1.7.4",
     "@apollo/client": "^3.5.10",
-    "@apollo/pedia": "^2.1.1",
+    "@apollo/pedia": "^2.1.2",
     "@apollo/signup-tracer": "^2.0.0",
     "@apollo/space-kit": "8.11.0",
     "@apollo/utm-grabber": "^1.3.1",
@@ -88,6 +88,8 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
     "react-icons": "^4.8.0",
+    "react-instantsearch": "^7.3.0",
+    "react-instantsearch-dom": "^6.40.4",
     "react-markdown": "^8.0.0",
     "react-player": "^2.10.1",
     "react-use": "^17.3.2",
