--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@algolia/autocomplete-core": "^1.5.2",
     "@algolia/autocomplete-plugin-algolia-insights": "^1.5.2",
     "@algolia/autocomplete-preset-algolia": "^1.5.2",
-    "@apollo/chakra-helpers": "^1.7.4",
+    "@apollo/brand": "^0.2.1",
+    "@apollo/chakra-helpers": "^2.0.0",
     "@apollo/client": "^3.5.10",
     "@apollo/pedia": "^3.1.0",
     "@apollo/signup-tracer": "^2.0.0",
