--- a/styles/Apollo/WordList.yml
+++ b/styles/Apollo/WordList.yml
@@ -7,6 +7,8 @@ action:
   name: replace
 swap:
   "all of": all
+  "Apollo Gateway": "`@apollo/gateway`"
+  "Apollo Studio": "GraphOS Studio"
   'back\-end': backend
   cURL: curl
   dialogue: dialog
@@ -20,7 +22,11 @@ swap:
   'leverag(?:ed|e|es)': use
   Node: Node.js
   NodeJS: Node.js
+  "Schema Checks": schema checks
   towards: toward
   '[Tt]ypescript': TypeScript
+  "the CLI": the Rover CLI
+  "the Sandbox": "Apollo Sandbox"
+  "the Router": the Apollo Router
   '[Uu]rl': URL
   'utiliz(?:ed|ation|e|es)': use
