--- a/styles/Apollo/Wordiness.yml
+++ b/styles/Apollo/Wordiness.yml
@@ -65,6 +65,7 @@ swap:
   fall down: fall
   fell down: fell
   for the duration of: during
+  functionality: capability|feature
   gather together: gather
   has the ability to: can
   has the capacity to: can
@@ -88,6 +89,7 @@ swap:
   in the neighborhood of: roughly
   in the vicinity of: close to
   it would appear that: apparently
+  "leverag(?:ed|e|es)": use
   lift up: lift
   made reference to: referred to
   make reference to: refer to
@@ -117,6 +119,7 @@ swap:
   under the provisions of: under
   until such time as: until
   used for fuel purposes: used for fuel
+  'utiliz(?:ed|ation|e|es)': use
   whether or not: whether
   with regard to: regarding
   with the exception of: except for
