Fix tech note issues

--- a/styles/Apollo/Wordiness.yml
+++ b/styles/Apollo/Wordiness.yml
@@ -72,6 +72,7 @@ swap:
   has the opportunity to: could
   hold a meeting: meet
   if this is not the case: if not
+  "ingest": import|load
   in a careful manner: carefully
   in a thoughtful manner: thoughtfully
   in a timely manner: timely
