--- a/styles/Apollo/Headings.yml
+++ b/styles/Apollo/Headings.yml
@@ -7,7 +7,7 @@ match: $sentence
 indicators:
   - ":"
 exceptions:
-  - Apollo
+  - API
   - Apollo Client DevTools
   - Apollo Client Web
   - Apollo Federation
@@ -22,13 +22,13 @@ exceptions:
   - CI(/CD)?
   - CLI
   - Cloud Dedicated
-  - Configur(e|ation|ing)
+  - "Configur(e|ation|ing)"
   - CORS
   - Cosmos
   - Datadog Metrics Explorer
   - Docker
   - Emmet
-  - Enterprise
+  - "[Ee]nterprise"
   - Explorer
   - Express
   - FAQ
@@ -49,10 +49,11 @@ exceptions:
   - Markdown
   - Marketplace
   - MongoDB
-  - OpenTelemetry
+  - OpenTelemetry Collector
   - PingOne
   - PRs?
   - REPL
+  - "[Rr]eporting"
   - Rover
   - SAF
   - Safari
@@ -62,6 +63,7 @@ exceptions:
   - SDUI
   - Studio
   - TypeScript
+  - UI
   - URLs?
   - VPC Lattice
   - Visual
