--- a/styles/Apollo/WordList.yml
+++ b/styles/Apollo/WordList.yml
@@ -44,6 +44,7 @@ swap:
   "HTTPs": HTTPS
   "homepage": homepage
   "in order to": to
+  "ios": iOS
   "javascript": JavaScript
   "k8s": Kubernetes
   "long press": touch & hold
