Add schema proposals (#643)
* Add stubs for nav

* Add raw preview docs

* Add to-dos

* Create separate implementation page

* Add Rover info

* Rewrite configuration page

* Copyedit

* Update Linting section

* Copyedit Configure proposals

* Rewrite Propose changes page

* Add shared content for Approved proposals

* Rewrite Review proposals

* Rewrite Implement proposals

* Update page descriptions

* Add placeholder images

* Rewrite overview

* Copyedits

* Copyedit overview

* Update diagram terminology

* Copyedit

* Use "stage" vs. "status"

* Document GA features

* Copyedit

* Add notification details

* Copyedit overview

* Update default notification configurations

* Update configuration + add image placeholders

* Remove schema reference tab

* Add more screenshots

* Address feedback

* Remove edit restrictions

* Clarify permissions

* Reorganize permissions table

* Add back image

* Apply suggestions from code review

Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

* Update src/content/graphos/delivery/configure-proposals.mdx

Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

* Add schema proposals to other schema pipeline docs (#647)

* Add Publication tip

* Add schema proposals to Pipeline overview

* Add Proposals task to schema checks

* Add schema proposals to GraphOS docs (#649)

* Add Proposals to pages list

* Add pages list to self-hosted quickstart

* Add and use StudioPages shared content

* Include proposals in Enterprise Features

* Add schema proposal permissions and break up permissions table

* Apply suggestions from code review

Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

* Address feedback

---------

Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

* Apply suggestions

* Fix nav

* Simplify delivery overview

* Standa

--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -19,15 +19,38 @@
     "Overview": "/",
     "Schema checks": {
       "Overview": "/schema-checks",
-      "Configuring schema checks": "/check-configurations",
-      "Connecting to GitHub": "/github-integration"
+      "Configure schema checks": "/check-configurations",
+      "Connect to GitHub": "/github-integration"
     },
     "Schema linting": {
       "Overview": "/schema-linter",
       "Linter rules": "/linter-rules"
     },
+    "Schema proposals": {
+      "Overview": ["/schema-proposals",
+      [
+        "enterprise", "preview"
+      ]],
+      "Configure proposals":[ "/schema-proposals/configuration",
+      [
+        "enterprise", "preview"
+      ]],
+
+      "Propose changes":[ "/schema-proposals/creation",
+      [
+        "enterprise", "preview"
+      ]],
+      "Review proposals":[ "/schema-proposals/review",
+      [
+        "enterprise", "preview"
+      ]],
+      "Implement proposals":[ "/schema-proposals/implementation",
+      [
+        "enterprise", "preview"
+      ]]
+    },
     "Schema delivery": {
-      "Publishing schemas": "/publishing-schemas",
+      "Publish schemas": "/publishing-schemas",
       "Launches": "/launches",
       "Contracts":
       {
