--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "prebuild": "tsx prebuild.ts"
   },
   "volta": {
     "node": "20.11.0",
@@ -18,17 +19,26 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^2.1.0",
-    "astro": "^4.2.4"
+    "astro": "^4.2.4",
+    "degit": "^2.8.4",
+    "eslint-plugin-astro": "^0.31.3",
+    "go-git-it": "^1.1.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^8.0.0",
+    "@types/degit": "^2.8.6",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "gitly": "^2.4.8",
     "prettier": "^3.2.4",
+    "prettier-plugin-astro": "^0.13.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
 }
