--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "prebuild": "tsx prebuild.ts",
-    "dev:react": "symlink-dir ../apollo-client/docs/source src/content/docs/react"
+    "link:react": "symlink-dir ../apollo-client/docs/source src/content/docs/react",
+    "link:server": "symlink-dir ../apollo-server/docs/source src/content/docs/apollo-server"
   },
   "volta": {
     "node": "20.11.0",
