--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,13 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "baseUrl": "/Users/trevorblades/Sites/apollographql/next-docs",
+    "paths": {
+      "~/*": [
+        "./src/*"
+      ]
+    }
+  }
 }
