--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@astrojs/mdx": "^2.1.0",
     "@astrojs/netlify": "^5.0.0",
     "@astrojs/react": "^3.0.9",
+    "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.2.4",
+    "astro-rehype-relative-markdown-links": "^0.5.1",
     "astro-seo": "^0.8.0",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
