Add migration guide

--- a/src/content/graphos/cloud-routing/config.json
+++ b/src/content/graphos/cloud-routing/config.json
@@ -38,6 +38,10 @@
       "AWS Lattice troubleshooting":[ "/dedicated/lattice-troubleshooting",
       [
         "preview"
+      ]],
+      "Migration":[ "/dedicated/migration",
+      [
+        "preview"
       ]]
     }
   }
