--- a/src/content/graphos/cloud-routing/config.json
+++ b/src/content/graphos/cloud-routing/config.json
@@ -18,6 +18,7 @@
   "sidebar": {
     "Overview": "/",
     "Configuration": "/configuration",
+    "Security": "/security",
     "Cloud Dedicated": {
       "Overview": ["/dedicated",
       [
