Allowlist GraphOS headings in Vale

--- a/styles/Apollo/Headings.yml
+++ b/styles/Apollo/Headings.yml
@@ -41,6 +41,8 @@ exceptions:
   - GitHub
   - GraphOS
   - GraphOS Cloud
+  - GraphOS Cloud compliance
+  - GraphOS Cloud security
   - GraphOS Studio
   - GraphQL Summit
   - Go live
