bootstrap custom domains

--- a/src/content/graphos/cloud-routing/config.json
+++ b/src/content/graphos/cloud-routing/config.json
@@ -31,6 +31,10 @@
       [
         "preview"
       ]],
+      "Custom Domains":[ "/dedicated/custom-domains",
+      [
+        "preview"
+      ]],
       "AWS Lattice configuration":[ "/dedicated/lattice",
       [
         "preview"
