--- a/styles/Apollo/Headings.yml
+++ b/styles/Apollo/Headings.yml
@@ -40,6 +40,7 @@ exceptions:
   - GDPR
   - GitHub
   - GraphOS
+  - Premium GraphOS Router features
   - GraphOS Studio
   - GraphQL Summit
   - Go live
