--- a/src/content/graphos/cloud-routing/config.json
+++ b/src/content/graphos/cloud-routing/config.json
@@ -31,7 +31,7 @@
       [
         "preview"
       ]],
-      "Custom Domains":[ "/dedicated/custom-domains",
+      "Custom domains":[ "/dedicated/custom-domains",
       [
         "preview"
       ]],
