--- a/styles/Google/Acronyms.yml
+++ b/styles/Google/Acronyms.yml
@@ -12,10 +12,13 @@ exceptions:
   - ASP
   - AWS
   - CLI
+  - CNAME
+  - CORS
   - CPU
   - CSS
   - CSV
   - DEBUG
+  - DNS
   - DOM
   - DPI
   - FAQ
@@ -55,7 +58,9 @@ exceptions:
   - SVG
   - TBD
   - TCP
+  - TLS
   - TODO
+  - TXT
   - URI
   - URL
   - USB
