Add file uploads to shared enterprise component

--- a/styles/Apollo/Headings.yml
+++ b/styles/Apollo/Headings.yml
@@ -44,7 +44,7 @@ exceptions:
   - GDPR
   - GitHub
   - GraphOS
-  - Premium GraphOS Router features
+  - Premium GraphOS router features
   - GraphOS Studio
   - GraphQL Summit
   - Go live
