Roll security info into cloud routing overview

--- a/styles/Apollo/Headings.yml
+++ b/styles/Apollo/Headings.yml
@@ -40,9 +40,7 @@ exceptions:
   - GDPR
   - GitHub
   - GraphOS
-  - GraphOS Cloud
-  - GraphOS Cloud compliance
-  - GraphOS Cloud security
+  - GraphOS Cloud on AWS
   - GraphOS Studio
   - GraphQL Summit
   - Go live
