Update content-linting workflow

--- a/.github/workflows/content-lint.yml
+++ b/.github/workflows/content-lint.yml
@@ -10,3 +10,5 @@ jobs:
       - uses: errata-ai/vale-action@reviewdog
         with: 
             files: src/content
+            version: 3.1.0
+            fail_on_error: true
