--- a/.github/vale.ini
+++ b/.github/vale.ini
@@ -1,6 +1,6 @@
-StylesPath = .github/styles
+StylesPath = ./styles
 Vocab = Docs
-MinAlertLevel = suggestion
+MinAlertLevel = error
 
 [formats]
 mdx = md
