--- a/.github/workflows/content-lint.yml
+++ b/.github/workflows/content-lint.yml
@@ -8,5 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: errata-ai/vale-action@reviewdog
-        with: 
-            files: src/content
+        with:
+          version: 3.1.0
+          vale_flags: "--config=.github/vale.ini"
+          files: src/content
+          fail_on_error: true
