--- a/.github/styles/Apollo/Headings.yml
+++ b/.github/styles/Apollo/Headings.yml
@@ -44,7 +44,8 @@ exceptions:
   - GDPR
   - GitHub
   - GraphOS
-  - Premium GraphOS Router features
+  - GraphOS Cloud on AWS
+  - Premium GraphOS router features
   - GraphOS Studio
   - GraphQL Summit
   - Go live
