--- a/.github/styles/Google/Acronyms.yml
+++ b/.github/styles/Google/Acronyms.yml
@@ -8,6 +8,7 @@ first: '\b([A-Z]{3,5})\b'
 second: '(?:\b[A-Z][a-z]+ )+\(([A-Z]{3,5})\)'
 # ... with the exception of these:
 exceptions:
+  - ACL
   - API
   - ASP
   - AWS
@@ -31,6 +32,7 @@ exceptions:
   - HTML
   - HTTP
   - HTTPS
+  - IAM
   - IDE
   - JAR
   - JSON
