--- a/.github/workflows/content-lint.yml
+++ b/.github/workflows/content-lint.yml
@@ -3,13 +3,13 @@ on: [pull_request]
 
 jobs:
   vale:
-    name: runner / vale
+    name: lint docs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: errata-ai/vale-action@reviewdog
         with:
           version: 3.1.0
-          vale_flags: "--config=.github/vale.ini"
+          vale_flags: "--config=.github/.vale.ini"
           files: src/content
           fail_on_error: true
