--- a/.github/styles/Apollo/Headings.yml
+++ b/.github/styles/Apollo/Headings.yml
@@ -45,11 +45,12 @@ exceptions:
   - GitHub
   - GraphOS
   - GraphOS Cloud on AWS
-  - Premium GraphOS router features
   - GraphOS Studio
+  - GraphQL
   - GraphQL Summit
   - Go live
   - gRPC
+  - How can Apollo help address requests from Data Subjects?
   - HTTP
   - I
   - IAM
@@ -65,6 +66,7 @@ exceptions:
   - PingOne
   - PRs?
   - REPL
+  - REST
   - "[Rr]eport(ing)?"
   - Rover
   - SAF
