--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@fec/remark-a11y-emoji": "^3.1.0",
+    "@fontsource/fira-code": "^5.0.17",
+    "@fontsource/inter": "^5.0.17",
     "@jlengstorf/get-share-image": "^0.8.0",
     "@loadable/component": "^5.15.2",
     "@mdx-js/mdx": "^1.6.22",
@@ -61,7 +63,6 @@
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-plugin-webfonts": "^2.2.1",
     "gatsby-remark-autolink-headers": "^5.4.0",
     "gatsby-remark-copy-linked-files": "^5.4.0",
     "gatsby-remark-mermaid": "^3.0.0",
