Add schema visualization page (#754)

--- a/src/content/graphos/basics/config.json
+++ b/src/content/graphos/basics/config.json
@@ -19,7 +19,6 @@
     "Intro to GraphOS": "/",
     "Graphs and variants": "/graphs",
     "Routing": "/routing",
-    "API keys": "/api-keys",
     "Get Started": {
       "Cloud setup": "/quickstart/cloud",
       "Self-hosted setup": [
@@ -30,14 +29,18 @@
       ],
       "Next steps": "/quickstart/next-steps"
     },
-    "Building Subgraphs": {
+    "Graph Development": {
       "Creating a new subgraph": "/graphs/creating-a-subgraph",
-      "Local development": "/graphs/local-development"
+      "Local subgraph development": "/graphs/local-development",
+      "Updating your graph": "/graphs/updating"
+    },
+    "GraphOS Studio features": {
+      "Graph exploration": "/graphs/studio-features",
+      "Supergraph-specific Studio features": "/graphs/federated-graphs"
     },
     "Graph Administration": {
-      "Updating your graph": "/graphs/updating",
-      "Managing graphs in Studio": "/graphs/studio-features",
-      "Supergraph-specific Studio features": "/graphs/federated-graphs"
+      "API keys": "/api-keys",
+      "Graph management": "/graphs/management"
     },
     "Graph Security": {
       "Securing subgraphs": "/graphs/securing-a-subgraph",
