--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
+    "react-icons": "^5.0.1",
     "react-instantsearch": "^7.3.0",
     "react-instantsearch-dom": "^6.40.4",
     "react-markdown": "^8.0.0",
