--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -3,11 +3,12 @@ name: Link check docs
 on: [pull_request]
 
 jobs:
-  list_mdx_files:
+  link_check:
     runs-on: ubuntu-latest
+    needs: preview.preview
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: List MDX Files
         id: list_mdx_files
@@ -17,3 +18,16 @@ jobs:
 
       - name: Display MDX Files
         run: cat mdx_files.txt
+
+      - name: Get deploy preview URL
+        id: deploy_preview
+        run: |
+          DEPLOY_PREVIEW_URL=$(curl -s -H "Authorization: Bearer $NETLIFY_AUTH_TOKEN" "https://api.netlify.com/api/v1/sites/$NETLIFY_SITE_ID/deploys" | jq -r '.[0].deploy_url')
+          echo "::set-output name=url::$DEPLOY_PREVIEW_URL"
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+
+      - name: Output Deploy Preview URL
+        run: echo "Deploy Preview URL: ${{ steps.deploy_preview.outputs.url }}"
+
