update PR trigger

--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -1,6 +1,8 @@
 name: Link check docs
 
-on: [pull_request]
+on: 
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 jobs:
   link_check:
