--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -1,13 +1,10 @@
 name: Link check docs
 
-on: 
-  pull_request:
-    types: [opened, reopened, synchronize]
+on: [pull_request]
 
 jobs:
   link_check:
     runs-on: ubuntu-latest
-    needs: preview.preview
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,16 +17,4 @@ jobs:
 
       - name: Display MDX Files
         run: cat mdx_files.txt
-
-      - name: Get deploy preview URL
-        id: deploy_preview
-        run: |
-          DEPLOY_PREVIEW_URL=$(curl -s -H "Authorization: Bearer $NETLIFY_AUTH_TOKEN" "https://api.netlify.com/api/v1/sites/$NETLIFY_SITE_ID/deploys" | jq -r '.[0].deploy_url')
-          echo "::set-output name=url::$DEPLOY_PREVIEW_URL"
-        env:
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-
-      - name: Output Deploy Preview URL
-        run: echo "Deploy Preview URL: ${{ steps.deploy_preview.outputs.url }}"
-
+        
