--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -1,4 +1,4 @@
-name: Link check docs
+name: Check docs links
 
 on: [pull_request]
 
@@ -6,15 +6,30 @@ jobs:
   link_check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: List MDX Files
-        id: list_mdx_files
+      - name: Wait for deploy preview rebuild
+        id: wait-deploy-preview
         run: |
-          curl -s "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files" |
-          jq -r '.[] | select(.filename | endswith(".mdx")) | .filename' > mdx_files.txt
+          url="https://deploy-preview-${{ github.event.number }}--apollo-monodocs.netlify.app/"
+          timeout=1000  # Timeout in seconds
+          start_time=$(date +%s)
+          sleep 60
+          while true; do
+            if curl -s --head "$url" | head -n 1 | grep "HTTP/1.[01] [23].." > /dev/null; then
+              echo "$url is accessible."
+              break
+            fi
+            current_time=$(date +%s)
+            elapsed_time=$((current_time - start_time))
+            if [ $elapsed_time -ge $timeout ]; then
+              echo "Timeout reached. $url is not accessible."
+              exit 1
+            fi
+            sleep 30  # Check every 30 sec
+          done
 
-      - name: Display MDX Files
-        run: cat mdx_files.txt
-        
+      - name: Install link checker
+        run: npm install -g linkinator
+
+      - name: Check Links
+        id: check_links
+        run: linkinator --concurrency 10 --timeout 5000 https://deploy-preview-${{ github.event.number }}--apollo-monodocs.netlify.app/
