--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -2,6 +2,9 @@ name: Check docs links
 
 on: [pull_request]
 
+env:
+  DEPLOY_PREVIEW_URL: https://deploy-preview-${{ github.event.number }}--apollo-monodocs.netlify.app/
+
 jobs:
   link_check:
     runs-on: ubuntu-latest
@@ -9,27 +12,22 @@ jobs:
       - name: Wait for deploy preview rebuild
         id: wait-deploy-preview
         run: |
-          url="https://deploy-preview-${{ github.event.number }}--apollo-monodocs.netlify.app/"
-          timeout=1000  # Timeout in seconds
-          start_time=$(date +%s)
-          sleep 60
-          while true; do
-            if curl -s --head "$url" | head -n 1 | grep "HTTP/1.[01] [23].." > /dev/null; then
-              echo "$url is accessible."
-              break
+          max_iters=20
+          counter=0
+          while [[ $counter -lt $max_iters ]]; do
+            sleep 60
+            if curl -s --head "$DEPLOY_PREVIEW_URL" | head -n 1 | grep "HTTP/1.[01] [23].." > /dev/null; then
+              echo "$DEPLOY_PREVIEW_URL is accessible."
+              exit 0
             fi
-            current_time=$(date +%s)
-            elapsed_time=$((current_time - start_time))
-            if [ $elapsed_time -ge $timeout ]; then
-              echo "Timeout reached. $url is not accessible."
-              exit 1
-            fi
-            sleep 30  # Check every 30 sec
+            counter=$((counter+1))
           done
+          echo "Timeout reached. $DEPLOY_PREVIEW_URL is not accessible."
+          exit 1
 
       - name: Install link checker
         run: npm install -g linkinator
 
       - name: Check Links
         id: check_links
-        run: linkinator --concurrency 10 --timeout 5000 https://deploy-preview-${{ github.event.number }}--apollo-monodocs.netlify.app/
+        run: linkinator --concurrency 10 --timeout 5000 $DEPLOY_PREVIEW_URL
