--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -12,14 +12,16 @@ jobs:
       - name: Wait for deploy preview rebuild
         id: wait-deploy-preview
         run: |
-          max_iters=20
+          max_iters=12
           counter=0
           while [[ $counter -lt $max_iters ]]; do
             sleep 60
-            if curl -s --head "$DEPLOY_PREVIEW_URL" | head -n 1 | grep "HTTP/1.[01] [23].." > /dev/null; then
-              echo "$DEPLOY_PREVIEW_URL is accessible."
+            response=$(curl -s -o /dev/null -w "%{http_code}" "$DEPLOY_PREVIEW_URL")
+            if [[ $response =~ ^[23] ]]; then
+              echo "$DEPLOY_PREVIEW_URL is accessible ($response)"
               exit 0
             fi
+            echo "Waiting for $DEPLOY_PREVIEW_URL ($response)"
             counter=$((counter+1))
           done
           echo "Timeout reached. $DEPLOY_PREVIEW_URL is not accessible."
